# BSC-HPC-Kernels

./: job.sh  job2.sh  job4.sh  kernels.c  test.c  test2.c
main/: main_old.c  o_axpy.c  s_axpy.c  s_dense.c  s_relu.c  s_softmax.c  s_sum.c  s_vector_sum.c  v_axpy.c  v_dense.c  v_dense2.c  v_relu.c  v_softmax.c  v_sum.c  v_vector_sum.c
oneDNN/src/cpu/rv64v/: CMakeLists.txt  jit_rv64v_convolution.cpp  jit_rv64v_convolution.hpp  rv64v_inner_product.cpp  rv64v_inner_product.hpp  rv64v_softmax.cpp  rv64v_softmax.hpp  rv64v_sum.cpp  rv64v_sum.hpp
oneDNN/src/cpu/rv64v/jit/: jit_assembler.hpp  platform_traits.cpp  platform_traits.hpp
oneDNN/src/cpu/rv64v/jit/convolution/: driver.cpp  driver.hpp  kernel.cpp  kernel.hpp
oneDNN/src/cpu/rv64v/rvjit/: _clang-format  instruction_types.h  mnemonic.c  rvjit.c  rvjit.h  rvjit.hpp
